#ifndef BASE_CONTROLLER_H
#define BASE_CONTROLLER_H

#include <string>

class BaseController {
public:
    virtual ~BaseController() = default;
};

#endif // BASE_CONTROLLER_H

